# kaobuddy-pwa

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  DEPLOY.md  DESIGN.md  Dockerfile  PRODUCT.md  README.md  fly.toml  index.html  main.py  open-kaobuddy.bat  open-kaobuddy.command  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt  skills-lock.json  vite.config.ts
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.md  release.md
.github/workflows/: ci.yml  ghcr-dockerhub.yml  package-portable.yml
backend/app/: ai_client.py  invites.py  logging.py  main.py  portable_launcher.py  prompts.py  runtime_paths.py  schemas.py  video.py
backend/static/: index.html  manifest.webmanifest  sw.js
backend/static/assets/: index-0exBhYGu.css  index-1GZxXAVl.css  index-1kynBf6J.css  index-2Kv4ljXk.js  index-6sx9w8nM.js  (+64 more)
docs/: ISSUE_DRAFT_V0.2.0.md  ISSUE_DRAFT_V0.2.1.md  RELEASE_CHECKLIST.md  ROADMAP.md
public/: manifest.webmanifest  sw.js
scripts/: build_portable_package.py  dev.mjs  kaobuddy_launcher.py
src/: App.tsx  aiAuth.ts  api.ts  fileReaders.ts  generationGuards.ts  inviteState.ts  legacyDoc.ts  main.tsx  pdfExport.ts  projectDrafts.ts  storage.ts  styles.css  types.ts  useCardLearning.ts  utils.ts
src/components/: Common.tsx  ErrorBoundary.tsx
tests/: test_api.py
tests/frontend/: aiAuth.test.ts  api.test.ts  dailyPlan.test.ts  errorBoundary.test.ts  generationGuards.test.ts  inviteState.test.ts  legacyDoc.test.ts  mockExam.test.ts  planParsing.test.ts  projectDrafts.test.ts
